cmake_minimum_required(VERSION 3.14)
project(adventofcode)

set(CMAKE_CXX_STANDARD 20)
set(CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)


add_executable(01 01.cpp)
add_executable(02 02.cpp)
add_executable(03 03.cpp)
add_executable(04 04.cpp)
add_executable(08 08.cpp)
add_executable(09 09.cpp)